# PipeFEM

./: .gitignore  LICENSE  bitbucket-pipelines.yml  env.yml  ex_plot_results.py  main.py  readme.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
pipe_fem/: assembler.py  bezier.py  mesher.py  pipe_fem.py  post_process.py  solver.py  utils.py
tests/: test.py  test_integration.py
tests/data/: amplitudes.csv  main.py
