[metadata]
name = SimplePipe
version = 1.1
author = Bruno Zuada Coelho
author_email = bruno.zuadacoelho@deltares.nl
description = 3D FEM of pipelines
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: OS Independent

[options]
packages = pipe_fem
include_package_data = True
install_requires =
    matplotlib>=3.6.2
    numpy>=1.23.4
    scipy>=1.9.3
    tqdm>=4.6.1
    imageio>=2.22.4
python_requires = >=3.10

[options.extras_require]
testing =
    pytest>=7.2.0
    tox>=4.21.2